# sable

./: .gitignore  JOURNAL.md  LICENSE  Makefile  README.md  api.go  api_asm.go  api_fast.go  arch.go  backpressure_test.go  bridge.go  bridge_fast.go  call.go  call_empty_test.go  call_fuzz_test.go  call_test.go  canary_asm_test.go  canary_test.go  cancel_test.go  demohandle.go  epoll_util.go  go.mod  go.sum  goexec.go  guard.go  handle_test.go  inline.go  inline_test.go  link_default.go  link_extern.go  linkname_stubs.s  multithread_test.go  netpoll_linkname.go  park.go  park_portable.go  poll.go  portable_test.go  robust_test.go  runtime_default.go  runtime_multithread.go  (+10 more)
.github/workflows/: ci.yml
bench/: crossing_asm_test.go  crossing_test.go  doc.go
cmd/sable-demo/: fusion_fast.go  fusion_portable.go  main.go
examples/: rust2go.md
examples/http/: http.go  http_test.go  main.go  stub.go
examples/rust2go/: main.go  main_test.go
examples/rust2go-real/: main.go  r2g_gen.go  real.go  real_test.go  stub.go
include/: sable.h
rust/: Cargo.toml
rust/src/: demo.rs  doorbell.rs  goexec.rs  http.rs  lib.rs  r2g.rs  reactor.rs  registry.rs
rust/tests/: loom_wakeup.rs
testdata/fuzz/FuzzCall/: 21594e9b1710195d
